working with pandas in jupiter

--- a/templates/home.html
+++ b/templates/home.html
@@ -6,6 +6,8 @@
 </head>
 <body>
 <h1>This is home page </h1>
-
+<p>Url format = http://127.0.0.1:5001/api/v1/station/date</p>
+<br>
+<p>Url format = http://127.0.0.1:5001/api/v1/10/1953-03-12</p>
 </body>
 </html>
