show station table on home page

--- a/templates/home.html
+++ b/templates/home.html
@@ -8,6 +8,8 @@
 <h1>This is home page </h1>
 <p>Url format = http://127.0.0.1:5001/api/v1/station/date</p>
 <br>
-<p>Url format = http://127.0.0.1:5001/api/v1/10/1953-03-12</p>
+<p>Url example = http://127.0.0.1:5001/api/v1/10/1953-03-12</p>
+<br>
+<p>{{data|safe}}</p>
 </body>
 </html>
