decorator , adding url for stations and yearly view

--- a/templates/home.html
+++ b/templates/home.html
@@ -8,8 +8,13 @@
 <h1>This is home page </h1>
 <p>Url format = http://127.0.0.1:5001/api/v1/station/date</p>
 <br>
-<p>Url example = http://127.0.0.1:5001/api/v1/10/1953-03-12</p>
+<p>Url example for 1 station on 1 date = http://127.0.0.1:5001/api/v1/10/1953-03-12</p>
 <br>
+<p>Url example for 1 station on all dates =
+    http://127.0.0.1:5001/api/v1/10</p>
+<br>
+<p>Url example for 1 station on year =
+    http://127.0.0.1:5001/annual/api/v1/10/1978</p>
 <p>{{data|safe}}</p>
 </body>
 </html>
